...
                    </View>

                    {/* Cerrar Sesión (Logout) */}
                    <Pressable
                      onPress={() =>
                        Alert.alert(
                          "Cerrar sesión",
                          "¿Estás seguro que querés salir?",
                          [
                            { text: "Cancelar", style: "cancel" },
                            {
                              text: "Salir",
                              style: "destructive",
...
